--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>IcyLeng's Website
-        </title>
-    </head>
+   <html>
+   <head>
+     <title>Icy's web homework</title>
+     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+   </head>
+   <body class="six">
+    <h1 id="imfor">II</h1>
+    <p id="highlight">Icyleng MFA1 Graphic Design
+                      OTIS COLLEGE OF ART AND DESIGN</p>
 
-    <body>
-        <h1>Hello World</h1>
-        <a href="project1/adoghasdiedby pabloneruda"></a>
-    </body>
-</html>
+    <p id="intro">
+    This is the second semester in <br>
+    otis college of art and design.<br>
+    Although WEB PRESENCE<br>
+    has a lot of homework to do,<br>
+    it is still one of my faviourate here.
+    </p>
+
+
+<h1>WEB PRESENCE SPRING 2016</h1>
+
+
+<div id="parttwo">
+
+    <h2>LEVEL 2</h2>
+    <ul>
+        <li><a href="project1/level2-1.html">Level 2-1</a></li>
+        <li><a href="project1/level2-2.html">Level 2-2</a></li>
+        <li><a href="project1/level2-3.html">Level 2-3</a></li>
+        <li><a href="project1/level2-4.html">Level 2-4</a></li>
+        <li><a href="project1/level2-5.html">Level 2-5</a></li>
+        <li><a href="project1/level2-6.html">Level 2-6</a></li>
+        <li><a href="project1/level2-7.html">Level 2-7</a></li>
+        <li><a href="project1/level2-8.html">Level 2-8</a></li>
+        <li><a href="project1/level2-9.html">Level 2-9</a></li>
+        <li><a href="project1/level2-10.html">Level 2-10</a></li>
+    </ul>
+</div>
+
+<div id="parttwo">
+
+    <h2>LEVEL 1</h2>
+    <ul>
+        <li><a href="project1/level1-1.html">Level 1-1</a></li>
+        <li><a href="project1/level1-2.html">Level 1-2</a></li>
+        <li><a href="project1/level1-3.html">Level 1-3</a></li>
+        <li><a href="project1/level1-4.html">Level 1-4</a></li>
+        <li><a href="project1/level1-5.html">Level 1-5</a></li>
+        <li><a href="project1/level1-6.html">Level 1-6</a></li>
+        <li><a href="project1/level1-7.html">Level 1-7</a></li>
+        <li><a href="project1/level1-8.html">Level 1-8</a></li>
+        <li><a href="project1/level1-9.html">Level 1-9</a></li>
+        <li><a href="project1/level1-10.html">Level 1-10</a></li>
+    </ul>
+</div>
+
+
+   </body>
+   </html>
