--- a/index.html
+++ b/index.html
@@ -25,18 +25,37 @@
 
 <div id="parttwo">
 
+    <h2>LEVEL 4</h2>
+    <ul>
+      <li><a href="project1/level2-3.html">Level 4-1</a></li>
+      <li><a href="project1/level2-4.html">Level 4-2</a></li>
+      <li><a href="project1/level2-5.html">Level 4-3</a></li>
+      <li><a href="project1/level2-6.html">Level 4-4</a></li>
+      <li><a href="project1/level2-7.html">Level 4-5</a></li>
+    </ul>
+</div>
+
+<div id="parttwo">
+
+    <h2>LEVEL 3</h2>
+    <ul>
+      <li><a href="project1/level2-1.html">Level 3-1</a></li>
+      <li><a href="project1/level2-2.html">Level 3-2</a></li>
+      <li><a href="project1/level2-8.html">Level 3-3</a></li>
+      <li><a href="project1/level2-9.html">Level 3-4</a></li>
+      <li><a href="project1/level2-10.html">Level 3-5</a></li>
+</ul>
+</div>
+
+<div id="parttwo">
+
     <h2>LEVEL 2</h2>
     <ul>
-        <li><a href="project1/level2-1.html">Level 2-1</a></li>
-        <li><a href="project1/level2-2.html">Level 2-2</a></li>
-        <li><a href="project1/level2-3.html">Level 2-3</a></li>
-        <li><a href="project1/level2-4.html">Level 2-4</a></li>
-        <li><a href="project1/level2-5.html">Level 2-5</a></li>
-        <li><a href="project1/level2-6.html">Level 2-6</a></li>
-        <li><a href="project1/level2-7.html">Level 2-7</a></li>
-        <li><a href="project1/level2-8.html">Level 2-8</a></li>
-        <li><a href="project1/level2-9.html">Level 2-9</a></li>
-        <li><a href="project1/level2-10.html">Level 2-10</a></li>
+      <li><a href="project1/level1-6.html">Level 2-1</a></li>
+      <li><a href="project1/level1-7.html">Level 2-2</a></li>
+      <li><a href="project1/level1-8.html">Level 2-3</a></li>
+      <li><a href="project1/level1-9.html">Level 2-4</a></li>
+      <li><a href="project1/level1-10.html">Level 2-5</a></li>
     </ul>
 </div>
 
@@ -44,17 +63,12 @@
 
     <h2>LEVEL 1</h2>
     <ul>
-        <li><a href="project1/level1-1.html">Level 1-1</a></li>
-        <li><a href="project1/level1-2.html">Level 1-2</a></li>
-        <li><a href="project1/level1-3.html">Level 1-3</a></li>
-        <li><a href="project1/level1-4.html">Level 1-4</a></li>
-        <li><a href="project1/level1-5.html">Level 1-5</a></li>
-        <li><a href="project1/level1-6.html">Level 1-6</a></li>
-        <li><a href="project1/level1-7.html">Level 1-7</a></li>
-        <li><a href="project1/level1-8.html">Level 1-8</a></li>
-        <li><a href="project1/level1-9.html">Level 1-9</a></li>
-        <li><a href="project1/level1-10.html">Level 1-10</a></li>
-    </ul>
+      <li><a href="project1/level1-1.html">Level 1-1</a></li>
+      <li><a href="project1/level1-2.html">Level 1-2</a></li>
+      <li><a href="project1/level1-3.html">Level 1-3</a></li>
+      <li><a href="project1/level1-4.html">Level 1-4</a></li>
+      <li><a href="project1/level1-5.html">Level 1-5</a></li>
+</ul>
 </div>
 
 
