--- a/index.html
+++ b/index.html
@@ -71,6 +71,21 @@
 </ul>
 </div>
 
+<div id="parttwo">
+
+    <h2>Tumblr Site</h2>
+    <ul>
+      <li><a href="project2/tumblr.html">Ceramic Club</a></li>
+</ul>
+</div>
+
+<div id="parttwo">
+
+    <h2>Portfolio Site</h2>
+    <ul>
+      <li><a href="project3/index.html">Icy-Design</a></li>
+</ul>
+</div>
 
    </body>
    </html>
