--- a/project3/index.html
+++ b/project3/index.html
@@ -24,28 +24,28 @@
       <div class="container">
         <ul class="column">
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
               <img src="img/macaron/webcover3.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">Skateboard Map</br>01.2016</div>
               <img src="img/skateboardposter/skateboardmapcolorful-01black.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">Tumblr Site Project For Web Presense Class</br>03.2016</div>
               <img src="img/tumblr/tumblrprojectback.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">Hourse Book Desgin</br>10.2015</div>
               <img src="img/lesson2/hoursewebcover.jpg"/>
             </a>
@@ -62,14 +62,14 @@
           </li>
 
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
               <img src="img/coffeebeanwebsite/padhomepage1.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
               <img src="img/th/THpostericyback.jpg"/>
             </a>
@@ -79,21 +79,21 @@
 
         <ul class="column">
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">To Mars - A Fiction Book</br>9.2015</div>
               <img src="img/tomars/webcoverblack.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
               <img src="img/teacherbook/webcoverteacherbook.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="">
+            <a href="project.html">
               <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
               <img src="img/lesson1/freewebcover.jpg"/>
             </a>
