--- a/project3/index.html
+++ b/project3/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <ul class="column">
           <li class="wrap">
-            <a href="project.html">
+            <a href="macaron.html">
               <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
               <img src="img/macaron/webcover3.jpg"/>
             </a>
@@ -55,7 +55,7 @@
 
         <ul class="column">
           <li class="wrap">
-            <a href="project.html">
+            <a href="skateboard.html">
               <div class="overlay">Skateboard Spot App Design For Web Design Class</br>04.2016</div>
               <img src="img/skateboardapp/webcover.jpg"/>
             </a>
@@ -63,7 +63,7 @@
 
           <li class="wrap">
             <a href="project.html">
-              <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
+              <div class="overlay">A Coffee bean company website Design</br>10.2015</div>
               <img src="img/coffeebeanwebsite/padhomepage1.jpg"/>
             </a>
           </li>
