--- a/project3/skateboard.html
+++ b/project3/skateboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-        <title>Icy Design - Contcact</title>
+        <title>Icy Design - Skateboard</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,300,300italic,400italic,700,700italic,600' rel='stylesheet' type='text/css'>
