--- a/project3/about.html
+++ b/project3/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-        <title>Icy Design - Contcact</title>
+        <title>Icy Design - About</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,300,300italic,400italic,700,700italic,600' rel='stylesheet' type='text/css'>
@@ -43,7 +43,7 @@ As a designer, I am inspired by people's emotions and the way they perceive info
 
 
         <ul class="columndetailpic">
-          <img class="detailpic" src="img/about.jpg"/>
+          <img class="detailpic3" src="img/about.jpg"/>
         </ul>
 
       </div>
