--- a/project3/skateboard.html
+++ b/project3/skateboard.html
@@ -47,13 +47,17 @@ Otis College of Art and Design
 
 
         <ul class="columndetailpic">
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-02.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-03.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-04.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-05.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-06.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-07.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-10.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-01.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-02.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-03.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-04.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-05.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-06.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-07.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-10.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-11.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-12.jpg"/>
+          <img class="detailpic3" src="img/skateboardapp/skateboardapp-13.jpg"/>
         </ul>
 
         <ul class="columndetailmove">
