--- a/project3/index.html
+++ b/project3/index.html
@@ -31,16 +31,23 @@
           </li>
 
           <li class="wrap">
-            <a href="project.html">
-              <div class="overlay">Skateboard Map</br>01.2016</div>
-              <img src="img/skateboardposter/skateboardmapcolorful-01black.jpg"/>
+            <a href="didbook.html">
+              <div class="overlay">DID Connotative Book</br>03.2016</div>
+              <img src="img/DID/webcover.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="project.html">
+            <a href="tumblr.html">
               <div class="overlay">Tumblr Site Project For Web Presense Class</br>03.2016</div>
               <img src="img/tumblr/tumblrprojectback.jpg"/>
+            </a>
+          </li>
+
+          <li class="wrap">
+            <a href="skateboardposter.html">
+              <div class="overlay">Skateboard Map</br>01.2016</div>
+              <img src="img/skateboardposter/skateboardmapcolorful-01black.jpg"/>
             </a>
           </li>
 
@@ -62,16 +69,23 @@
           </li>
 
           <li class="wrap">
-            <a href="project.html">
+            <a href="coffeebean.html">
               <div class="overlay">A Coffee bean company website Design</br>10.2015</div>
               <img src="img/coffeebeanwebsite/padhomepage1.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="project.html">
-              <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
+            <a href="th.html">
+              <div class="overlay">Brand Poster</br>10.2015</div>
               <img src="img/th/THpostericyback.jpg"/>
+            </a>
+          </li>
+
+          <li class="wrap">
+            <a href="photography.html">
+              <div class="overlay">Photography</br>10.2012</div>
+              <img src="img/07photograph/cover.jpg"/>
             </a>
           </li>
 
@@ -79,16 +93,23 @@
 
         <ul class="column">
           <li class="wrap">
-            <a href="project.html">
-              <div class="overlay">To Mars - A Fiction Book</br>9.2015</div>
+            <a href="tomars.html">
+              <div class="overlay">To Mars - <br/>A Science Fiction</br>9.2015</div>
               <img src="img/tomars/webcoverblack.jpg"/>
             </a>
           </li>
 
           <li class="wrap">
-            <a href="project.html">
-              <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
+            <a href="journal.html">
+              <div class="overlay">Journal Design</br>10.2015</div>
               <img src="img/teacherbook/webcoverteacherbook.jpg"/>
+            </a>
+          </li>
+
+          <li class="wrap">
+            <a href="mevi.html">
+              <div class="overlay">ME VI Design</br>10.2015</div>
+              <img src="img/MEvi/cover.jpg"/>
             </a>
           </li>
 
