--- a/project3/macaron.html
+++ b/project3/macaron.html
@@ -28,15 +28,14 @@
           MACARON PECKAGING DESIGN
           </h1>
           <h2 class="wrapsubtitle">
-          For Web Design Class
+          The packaging design plan for a macaron shop -- Steent Hello.
           </h2>
 
           <p class="wrapdetail">
-          This peoject is about a subculture - Skateboard.
-Skateboard visual language is very diverse, I choice the most tipical one "Graffiti".
-Graffiti is the most important part in skateboard, it contain rebelity and the desire of freedom.
-This App is a spot app, which provide imformation of skateboarding spot. It allows skateboarder rate and comment for every spot. Or skateboarder can submit new skateboarding spot. And skateboarder can communicate through this app.
-
+            The brand targets females. The main inspiration for the brand design came out of  macaron colors and elements related to  the place of origin.
+  The package design is customized to be convenient for eating to match the fast life.
+  All the patterns are original.
+  Makes people can enjoy  macaron and the beautiful live wherever they are.
           </p>
 
           <p class="date">
@@ -47,13 +46,11 @@ Otis College of Art and Design
 
 
         <ul class="columndetailpic">
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-02.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-03.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-04.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-05.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-06.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-07.jpg"/>
-          <img class="detailpic" src="img/skateboardapp/skateboardapp-10.jpg"/>
+          <img class="detailpic1" src="img/macaron/macaron0.jpg"/>
+          <img class="detailpic1" src="img/macaron/macaron.jpg"/>
+          <img class="detailpic1" src="img/macaron/macaron1.jpg"/>
+          <img class="detailpic1" src="img/macaron/macaron2.jpg"/>
+          <img class="detailpic1" src="img/macaron/macaron3.jpg"/>
         </ul>
 
         <ul class="columndetailmove">
