--- a/project3/macaron.html
+++ b/project3/macaron.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <img src="img/logo.png"/>
+          <a href="index"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -54,11 +54,8 @@ Otis College of Art and Design
         </ul>
 
         <ul class="columndetailmove">
-          <a href="">
-            <img src="img/logomark2.png"/>
-          </a>
 
-          <a href="">
+          <a href="skateboard.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
