--- a/project3/mevi.html
+++ b/project3/mevi.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <img src="img/logo.png"/>
+          <a href="index"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -56,11 +56,11 @@ Shortly after, the doll has been bought by a design company named "MEGIC EYE" wh
         </ul>
 
         <ul class="columndetailmove">
-          <a href="">
+          <a href="th.html">
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="">
+          <a href="skateboardposter.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
