--- a/project3/index.html
+++ b/project3/index.html
@@ -10,7 +10,7 @@
     <body>
       <header>
         <h1>
-          <img src="img/logo.png"/>
+          <a href="index"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
