--- a/project3/journal.html
+++ b/project3/journal.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <img src="img/logo.png"/>
+          <a href="index"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -49,11 +49,11 @@
         </ul>
 
         <ul class="columndetailmove">
-          <a href="">
+          <a href="coffeebean.html">
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="">
+          <a href="tumblr.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
