--- a/project3/photography.html
+++ b/project3/photography.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <img src="img/logo.png"/>
+          <a href="index"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -53,11 +53,11 @@ At the end of 2012, demolition and reconstruction of Guanzha Camping area of Bao
         </ul>
 
         <ul class="columndetailmove">
-          <a href="">
+          <a href="skateboardposter.html">
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="">
+          <a href="macaron.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
