--- a/project3/skateboard.html
+++ b/project3/skateboard.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <img src="img/logo.png"/>
+          <a href="index"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -62,11 +62,11 @@ Otis College of Art and Design
         </ul>
 
         <ul class="columndetailmove">
-          <a href="">
+          <a href="macaron.html">
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="">
+          <a href="tomars">
             <img src="img/logomark.png"/>
           </a>
         </ul>
