--- a/project3/tomars.html
+++ b/project3/tomars.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <img src="img/logo.png"/>
+          <a href="index"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -57,11 +57,11 @@
         </ul>
 
         <ul class="columndetailmove">
-          <a href="">
+          <a href="skateboard.html">
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="">
+          <a href="didbook.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
