--- a/project3/photography.html
+++ b/project3/photography.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <a href="index"><img src="img/logo.png"/></a>
+          <a href="index.html"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -57,7 +57,7 @@ At the end of 2012, demolition and reconstruction of Guanzha Camping area of Bao
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="macaron.html">
+          <a href="free.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
