--- a/project3/skateboard.html
+++ b/project3/skateboard.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <a href="index"><img src="img/logo.png"/></a>
+          <a href="index.html"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -66,7 +66,7 @@ Otis College of Art and Design
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="tomars">
+          <a href="tomars.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
