--- a/project3/free.html
+++ b/project3/free.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-        <title>Icy Design - Skateboard</title>
+        <title>Icy Design - Free</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,300,300italic,400italic,700,700italic,600' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <a href="index"><img src="img/logo.png"/></a>
+          <a href="index.html"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -48,25 +48,17 @@ Otis College of Art and Design
 
 
         <ul class="columndetailpic">
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-01.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-02.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-03.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-04.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-05.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-06.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-07.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-10.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-11.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-12.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-13.jpg"/>
+          <img class="detailpic3" src="img/lesson1/5D3_0226.JPG"/>
+          <img class="detailpic3" src="img/lesson1/5D3_0231.JPG"/>
+          <img class="detailpic3" src="img/lesson1/5D3_0236.JPG"/>
         </ul>
 
         <ul class="columndetailmove">
-          <a href="macaron.html">
+          <a href="photography.html">
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="tomars">
+          <a href="whitehourse.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
