--- a/project3/macaron.html
+++ b/project3/macaron.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <a href="index"><img src="img/logo.png"/></a>
+          <a href="index.html"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
