--- a/project3/whitehourse.html
+++ b/project3/whitehourse.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <h1>
-          <a href="index"><img src="img/logo.png"/></a>
+          <a href="index.html"><img src="img/logo.png"/></a>
         </h1>
         <nav>
           <ul>
@@ -48,25 +48,19 @@ Otis College of Art and Design
 
 
         <ul class="columndetailpic">
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-01.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-02.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-03.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-04.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-05.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-06.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-07.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-10.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-11.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-12.jpg"/>
-          <img class="detailpic3" src="img/skateboardapp/skateboardapp-13.jpg"/>
+          <img class="detailpic1" src="img/lesson2/5D3_0388.JPG"/>
+          <img class="detailpic1" src="img/lesson2/5D3_0390.JPG"/>
+          <img class="detailpic1" src="img/lesson2/5D3_0391.JPG"/>
+          <img class="detailpic1" src="img/lesson2/5D3_0392.JPG"/>
+          <img class="detailpic1" src="img/lesson2/5D3_0395.JPG"/>
         </ul>
 
         <ul class="columndetailmove">
-          <a href="macaron.html">
+          <a href="free.html">
             <img src="img/logomark2.png"/>
           </a>
 
-          <a href="tomars">
+          <a href="macaron.html">
             <img src="img/logomark.png"/>
           </a>
         </ul>
