--- a/project3/macaron.html
+++ b/project3/macaron.html
@@ -32,10 +32,9 @@
           </h2>
 
           <p class="wrapdetail">
-            The brand targets females. The main inspiration for the brand design came out of  macaron colors and elements related to  the place of origin.
-  The package design is customized to be convenient for eating to match the fast life.
+            The brand targets females. The main inspiration for the packaging design are macaron itself and the place of origin.
+  The packaging design is customized to be convenient for eating, so that people enjoy macaron and the beautiful live wherever they are.
   All the patterns are original.
-  Makes people can enjoy  macaron and the beautiful live wherever they are.
           </p>
 
           <p class="date">
