--- a/project3/index.html
+++ b/project3/index.html
@@ -52,7 +52,7 @@
           </li>
 
           <li class="wrap">
-            <a href="project.html">
+            <a href="whitehourse.html">
               <div class="overlay">Hourse Book Desgin</br>10.2015</div>
               <img src="img/lesson2/hoursewebcover.jpg"/>
             </a>
@@ -114,8 +114,8 @@
           </li>
 
           <li class="wrap">
-            <a href="project.html">
-              <div class="overlay">Macaron Peckaging Design</br>10.2015</div>
+            <a href="free.html">
+              <div class="overlay">Free</br>10.2015</div>
               <img src="img/lesson1/freewebcover.jpg"/>
             </a>
           </li>
