--- a/project3/index.html
+++ b/project3/index.html
@@ -14,7 +14,7 @@
         </h1>
         <nav>
           <ul>
-            <li><a href="index.html">WORK</a></li>
+            <li><a href="works.html">WORK</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
