--- a/index.html
+++ b/index.html
@@ -87,5 +87,13 @@
 </ul>
 </div>
 
+<div id="parttwo">
+
+    <h2>Workshop 3</h2>
+    <ul>
+      <li><a href="3webworkshop/index.html">Do not be afraid to lost</a></li>
+</ul>
+</div>
+
    </body>
    </html>
