--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
            </span>
            <ul class="menu">
                <li class="now">Home</li>
-               <li>All works</li>
-               <li>About</li>
+               <li><a>All works</a></li>
+               <li><a>About</a></li>
            </ul>
        </header>
        
