--- a/printing.html
+++ b/printing.html
@@ -99,9 +99,9 @@
        <footer>
            <h6 class="name">Icy Leng</h6>
            <ul class="catalog">
-               <li class="catalog-click"><a href="index.html">UI&UX&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-               <li class="catalog-element1"><a href="branding.html">Branding</a></li>
-               <li class="catalog-element2"><a href="printing.html">Printing</a></li>
+               <li class="catalog-element1"><a href="index.html">UI&UX</a></li>
+               <li class="catalog-element2"><a href="branding.html">Branding</a></li>
+               <li class="catalog-click"><a href="printing.html">Printing&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
                <li class="catalog-element3"><a href="vedio.html">Vedio</a></li>
                <li class="catalog-element4"><a href="experimental.html">Experimental</a></li>
            </ul>
