--- a/experimental.html
+++ b/experimental.html
@@ -18,11 +18,11 @@
                 display:block;
            /*开始时候下划线的宽度为0*/
                 width:0;
-                height:2px;
+                height: 1px;
                 position:absolute;
                 left:0;
                 bottom:-3px;
-                background: #55BEFF;
+                background: #4A4A4A;
            /*这里我们设定所有改变都有动画效果，可以自己指定样式才有动画效果*/
                 transition:all 0.3s ease-in-out;
             }
