--- a/experimental.html
+++ b/experimental.html
@@ -7,7 +7,7 @@
      <link href="https://fonts.googleapis.com/css?family=Radley:400,400i|Raleway:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
        
        <style>
-           /*设置a的定位，给我们自己编写的下划线一个定位参考*/
+           /*设置a的定位，下划线定位参考*/
            .left-to-right{
                 position:relative;
             }
@@ -21,9 +21,9 @@
                 height: 1px;
                 position:absolute;
                 left:0;
-                bottom:-3px;
-                background: #4A4A4A;
-           /*这里我们设定所有改变都有动画效果，可以自己指定样式才有动画效果*/
+                bottom:-5px;
+                background: #4f4f4f;
+           /*设定所有改变都有动画效果*/
                 transition:all 0.3s ease-in-out;
             }
            .left-to-right:hover::after{
@@ -122,11 +122,11 @@
        <footer>
            <h6 class="name"><a href="" class="left-to-right">Icy Leng</a></h6>
            <ul class="catalog">
-               <li class="catalog-element1"><a href="index.html">UI&UX</a></li>
-               <li class="catalog-element2"><a href="branding.html">Branding</a></li>
-               <li class="catalog-element3"><a href="printing.html">Printing</a></li>
-               <li class="catalog-element4"><a href="vedio.html">Vedio</a></li>
-               <li class="catalog-click1"><a href="experimental.html">Experimental&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+               <a href="index.html"><li class="catalog-element1">UI&UX</li></a>
+               <a href="branding.html"><li class="catalog-element2">Branding</li></a>
+               <a href="printing.html"><li class="catalog-element3">Printing</li></a>
+               <a href="vedio.html"><li class="catalog-element4">Vedio</li></a>
+               <a href="experimental.html"><li class="catalog-click5">Experimental&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></a>
            </ul>
        </footer>
        
