--- a/sspot.html
+++ b/sspot.html
@@ -8,7 +8,7 @@
     </head>
        
    <body>
-       <header style="background-color: #B0FDFF">
+       <header class="header" style="background-color: #B0FDFF">
            <a href="index.html"><img class="logo" src="img/logo.png"/></a>
            <h5 class="back"><a href="index.html" class="left-to-right">Back</a></h5>
            <span class="menu-icon">
