--- a/themountain.html
+++ b/themountain.html
@@ -102,7 +102,7 @@
           <div class="next">
               <a href="meow.html">
                   <h4>next</h4>
-                  <div class="animationleft-to-right" style="background-color: #yellow"></div>
+                  <div class="animationleft-to-right" style="background-color: yellow"></div>
                   <h3>Meow</h3>
               </a>
           </div>
