--- a/branding.html
+++ b/branding.html
@@ -18,8 +18,8 @@
            </span>
            <ul class="menu">
                <li class="now">Home</li>
-               <li><a>All works</a></li>
-               <li><a>About</a></li>
+               <li><a href="allworks.html">All works</a></li>
+               <li><a href="about.html">About</a></li>
            </ul>
        </header>
        
@@ -101,7 +101,7 @@
        </div>
        
        <footer>
-           <h6 class="name"><a href="" class="left-to-right">Icy Leng</a></h6>
+           <h6 class="name"><a href="about.html" class="left-to-right">Icy Leng</a></h6>
            <ul class="catalog">
                <a href="index.html"><li class="catalog-element1">UI&UX</li></a>
                <a href="branding.html"><li class="catalog-click2">Branding&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></a>
