--- a/macaron.html
+++ b/macaron.html
@@ -10,16 +10,16 @@
    <body>
        <header class="header" style="background-color: #d5e3e6">
            <a href="index.html"><img class="logo" src="img/logo.png"/></a>
-           <h5 class="back"><a href="index.html" class="left-to-right">Back</a></h5>
+           <h5 class="back"><a href="branding.html" class="left-to-right">Back</a></h5>
            <span class="menu-icon">
                <div class="right"></div>
                <div class="remove"></div>
                <div class="left"></div>
            </span>
            <ul class="menu">
-               <li class="now">Home</li>
-               <li><a href="" class="left-to-right">All works</a></li>
-               <li><a href="" class="left-to-right">About</a></li>
+               <li><a href="index.html" class="left-to-right">Home</a></li>
+               <li><a href="allworks.html" class="left-to-right">All works</a></li>
+               <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
            <h1 class="title">Macaron</h1>
            <img class="cover" src="img/index/macaron.png"/>
