--- a/sspot.html
+++ b/sspot.html
@@ -17,9 +17,9 @@
                <div class="left"></div>
            </span>
            <ul class="menu">
-               <li class="now">Home</li>
-               <li><a href="" class="left-to-right">All works</a></li>
-               <li><a href="" class="left-to-right">About</a></li>
+               <li><a href="index.html" class="left-to-right">Home</a></li>
+               <li><a href="allworks.html" class="left-to-right">All works</a></li>
+               <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
            <h1 class="title">S-spots</h1>
            <img class="cover" src="img/index/sshome.png"/>
