--- a/sspot.html
+++ b/sspot.html
@@ -82,10 +82,10 @@
        
        <div class="footnav">
           <div class="previous">
-              <a href="sspot.html">
-                  <h4>previous</h4>
-                  <div class="animationright-to-left" style="background-color: yellow"></div>
-                  <h3>meow</h3>
+              <a href="">
+                  <h4> </h4>
+                  <div class="animationright-to-left" style="background-color: transparent"></div>
+                  <h3> </h3>
               </a>
           </div>
        
