--- a/themountain.html
+++ b/themountain.html
@@ -96,10 +96,10 @@
           </div>
        
           <div class="next">
-              <a href="meow.html">
+              <a href="lightbox.html">
                   <h4>next</h4>
-                  <div class="animationleft-to-right" style="background-color: yellow"></div>
-                  <h3>Meow</h3>
+                  <div class="animationleft-to-right" style="background-color: #f0ebe2"></div>
+                  <h3>Lightbox</h3>
               </a>
           </div>
        </div>
