--- a/lightbox.html
+++ b/lightbox.html
@@ -77,8 +77,8 @@
        </div>
        
        <div class="showcase">
-           <img src="img/lightbox/show1.png"/>
-           <img src="img/lightbox/show2.png"/>
+           <img src="img/lightbox/show1.jpg"/>
+           <img src="img/lightbox/show2.jpg"/>
        </div>
    
    </body>
