--- a/branding.html
+++ b/branding.html
@@ -58,8 +58,9 @@
                    </h2>
                    <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
                    <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
-                   <h6 class="projectname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                       <a href="" class="left-to-right">Sweet Hello</a>&nbsp;</h6>
+                   <h6 class="projectname">&nbsp;&nbsp;&nbsp;
+                       <a href="" class="left-to-right">Sweet Hello</a>&nbsp;
+                   &nbsp;&nbsp;</h6>
                </div>
                
                <div class="item-text fade">
