--- a/sspot.html
+++ b/sspot.html
@@ -21,7 +21,7 @@
                <li><a href="allworks.html" class="left-to-right">All works</a></li>
                <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
-           <h1 class="title">S-spots</h1>
+           <h1 class="title">Sk8board</h1>
            <img class="cover" src="img/index/sshome.png"/>
        </header>
        
