--- a/lightbox.html
+++ b/lightbox.html
@@ -89,16 +89,16 @@
           <div class="previous">
               <a href="themountain.html">
                   <h4>previous</h4>
-                  <div class="animationright-to-left" style="background-color: #FF5958"></div>
-                  <h3>Mountain</h3>
+                  <div class="animationright-to-left" style="background: transparent linear-gradient(to right, #96deff 10%, #b5e6ff 20%, #f4deff 100%)"></div>
+                  <h3>Time Painting</h3>
               </a>
           </div>
        
           <div class="next">
-              <a href="meow.html">
+              <a href="themountain.html">
                   <h4>next</h4>
-                  <div class="animationleft-to-right" style="background-color: yellow"></div>
-                  <h3>meow</h3>
+                  <div class="animationleft-to-right" style="background-color: #FF5958"></div>
+                  <h3>Mountain</h3>
               </a>
           </div>
        </div>
