--- a/timepainting.html
+++ b/timepainting.html
@@ -87,10 +87,10 @@
        
        <div class="footnav">
           <div class="previous">
-              <a href="sspot.html">
-                  <h4>previous</h4>
-                  <div class="animationright-to-left" style="background-color: #B0FDFF"></div>
-                  <h3>S-spots</h3>
+              <a href="">
+                  <h4></h4>
+                  <div class="animationright-to-left" style="background-color: transparent"></div>
+                  <h3></h3>
               </a>
           </div>
        
