--- a/macaron.html
+++ b/macaron.html
@@ -84,18 +84,18 @@
        
        <div class="footnav">
           <div class="previous">
-              <a href="meow.html">
+              <a href="sspot.html">
                   <h4>previous</h4>
-                  <div class="animationright-to-left" style="background-color: yellow"></div>
-                  <h3>Meow</h3>
+                  <div class="animationright-to-left" style="background-color: #B0FDFF"></div>
+                  <h3>sk8board</h3>
               </a>
           </div>
        
           <div class="next">
               <a href="meow.html">
                   <h4>next</h4>
-                  <div class="animationleft-to-right" style="background-color: #FF5958"></div>
-                  <h3>meow</h3>
+                  <div class="animationleft-to-right" style="background-color: black"></div>
+                  <h3>Oits Summer</h3>
               </a>
           </div>
        </div>
