--- a/sspot.html
+++ b/sspot.html
@@ -81,17 +81,17 @@
        <div class="footnav">
           <div class="previous">
               <a href="">
-                  <h4> </h4>
-                  <div class="animationright-to-left" style="background-color: transparent"></div>
-                  <h3> </h3>
+                  <h4>Previous</h4>
+                  <div class="animationright-to-left" style="background-color: yellow"></div>
+                  <h3>Meow</h3>
               </a>
           </div>
        
           <div class="next">
-              <a href="themountain.html">
+              <a href="macaron.html">
                   <h4>next</h4>
-                  <div class="animationleft-to-right" style="background-color: #FF5958"></div>
-                  <h3>Mountain</h3>
+                  <div class="animationleft-to-right" style="background-color: #d5e3e6"></div>
+                  <h3>Macaron</h3>
               </a>
           </div>
        </div>
