--- a/themountain.html
+++ b/themountain.html
@@ -88,18 +88,18 @@
        
        <div class="footnav">
           <div class="previous">
-              <a href="sspot.html">
+              <a href="lightbox.html">
                   <h4>previous</h4>
-                  <div class="animationright-to-left" style="background-color: #B0FDFF"></div>
-                  <h3>S-spots</h3>
+                  <div class="animationright-to-left" style="background-color: #f0ebe2"></div>
+                  <h3>lightbox</h3>
               </a>
           </div>
        
           <div class="next">
-              <a href="lightbox.html">
+              <a href="meow.html">
                   <h4>next</h4>
-                  <div class="animationleft-to-right" style="background-color: #f0ebe2"></div>
-                  <h3>Lightbox</h3>
+                  <div class="animationleft-to-right" style="background-color: yellow"></div>
+                  <h3>Meow</h3>
               </a>
           </div>
        </div>
