--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
        
        <body>
            <header>
-              <img class="logo" src="img/logo.png"/>
+              <a href="index.html"><img class="logo" src="img/logo.png"/></a>
               <span class="menu-icon">
                   <div class="right"></div>
                   <div class="remove"></div>
@@ -16,7 +16,6 @@
               </span>
               <ul class="menu">
                   <li><a class="left-to-right" href="index.html">Home</a></li>
-                  <li><a class="left-to-right" href="allworks.html">All works</a></li>
                   <li class="now">About</li>
               </ul>
            </header>
