--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
            </span>
            <ul class="menu">
                <li class="now">Home</li>
-               <li><a href="allworks.html" class="left-to-right">All works</a></li>
                <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
        </header>
@@ -157,11 +156,11 @@
        <footer>
            <h6 class="name"><a href="about.html" class="left-to-right">Icy Leng</a></h6>
            <ul class="catalog">
-               <a href="index.html"><li class="catalog-click">UI&UX&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></a>
+               <a href=""><li class="catalog-click">UI&UX&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></a>
                <a href="branding.html"><li class="catalog-element1">Branding</li></a>
                <a href="printing.html"><li class="catalog-element2">Printing</li></a>
-               <a href="vedio.html"><li class="catalog-element3">Vedio</li></a>
-               <a href="others.html"><li class="catalog-element4">others&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></a>
+               <a href="video.html"><li class="catalog-element3">Video</li></a>
+               <a href="others.html"><li class="catalog-element4">others</li></a>
            </ul>
        </footer>
        
