--- a/printing.html
+++ b/printing.html
@@ -17,7 +17,6 @@
            </span>
            <ul class="menu">
                <li class="now">Home</li>
-               <li><a href="allworks.html" class="left-to-right">All works</a></li>
                <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
        </header>
@@ -112,8 +111,8 @@
            <ul class="catalog">
                <a href="index.html"><li class="catalog-element1">UI&UX</li></a>
                <a href="branding.html"><li class="catalog-element2">Branding</li></a>
-               <a href="printing.html"><li class="catalog-click3">Printing&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></a>
-               <a href="vedio.html"><li class="catalog-element3">Vedio</li></a>
+               <a href=""><li class="catalog-click3">Printing&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></a>
+               <a href="video.html"><li class="catalog-element3">Video</li></a>
                <a href="others.html"><li class="catalog-element4">Others</li></a>
            </ul>
        </footer>
@@ -121,7 +120,7 @@
        <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
        <script src='https://cdn.rawgit.com/ariona/hover3d/master/dist/js/jquery.hover3d.js'></script>
-       <script src='js/index.js'></script>
+       <script src='js/printing.js'></script>
        
        
    </body>
