--- a/videoreverse.html
+++ b/videoreverse.html
@@ -274,7 +274,7 @@
        <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
        <script src='https://cdn.rawgit.com/ariona/hover3d/master/dist/js/jquery.hover3d.js'></script>
-       <script src='js/video.js'></script>
+       <script src='js/videoreverse.js'></script>
        
        
    </body>
