--- a/lightbox.html
+++ b/lightbox.html
@@ -18,7 +18,6 @@
            </span>
            <ul class="menu">
                <li><a href="index.html" class="left-to-right">Home</a></li>
-               <li><a href="allworks.html" class="left-to-right">All works</a></li>
                <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
            <h1 class="title">Light Box</h1>
@@ -87,7 +86,7 @@
        
        <div class="footnav">
           <div class="previous">
-              <a href="themountain.html">
+              <a href="timepainting.html">
                   <h4>previous</h4>
                   <div class="animationright-to-left" style="background: transparent linear-gradient(to right, #96deff 10%, #b5e6ff 20%, #f4deff 100%)"></div>
                   <h3>Time Painting</h3>
