--- a/macaron.html
+++ b/macaron.html
@@ -18,7 +18,6 @@
            </span>
            <ul class="menu">
                <li><a href="index.html" class="left-to-right">Home</a></li>
-               <li><a href="allworks.html" class="left-to-right">All works</a></li>
                <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
            <h1 class="title">Macaron</h1>
@@ -92,10 +91,10 @@
           </div>
        
           <div class="next">
-              <a href="meow.html">
+              <a href="tomars.html">
                   <h4>next</h4>
-                  <div class="animationleft-to-right" style="background-color: black"></div>
-                  <h3>Oits Summer</h3>
+                  <div class="animationleft-to-right" style="background-color: #ebe5e1"></div>
+                  <h3>To Mars</h3>
               </a>
           </div>
        </div>
