--- a/sspot.html
+++ b/sspot.html
@@ -18,7 +18,6 @@
            </span>
            <ul class="menu">
                <li><a href="index.html" class="left-to-right">Home</a></li>
-               <li><a href="allworks.html" class="left-to-right">All works</a></li>
                <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
            <h1 class="title">Sk8board</h1>
@@ -80,7 +79,7 @@
        
        <div class="footnav">
           <div class="previous">
-              <a href="">
+              <a href="meow.html">
                   <h4>Previous</h4>
                   <div class="animationright-to-left" style="background-color: yellow"></div>
                   <h3>Meow</h3>
