--- a/tomars.html
+++ b/tomars.html
@@ -18,7 +18,6 @@
            </span>
            <ul class="menu">
                <li><a href="index.html" class="left-to-right">Home</a></li>
-               <li><a href="allworks.html" class="left-to-right">All works</a></li>
                <li><a href="about.html" class="left-to-right">About</a></li>
            </ul>
            <h1 class="title">To Mars</h1>
@@ -106,18 +105,18 @@
        
        <div class="footnav">
           <div class="previous">
-              <a href="meow.html">
+              <a href="macaron.html">
                   <h4>previous</h4>
-                  <div class="animationright-to-left" style="background-color: yellow"></div>
-                  <h3>Meow</h3>
+                  <div class="animationright-to-left" style="background-color: #d5e3e6"></div>
+                  <h3>Macaron</h3>
               </a>
           </div>
        
           <div class="next">
-              <a href="meow.html">
+              <a href="timepainting.html">
                   <h4>next</h4>
-                  <div class="animationleft-to-right" style="background-color: #FF5958"></div>
-                  <h3>meow</h3>
+                  <div class="animationleft-to-right" style="background: transparent linear-gradient(to right, #96deff 10%, #b5e6ff 20%, #f4deff 100%)"></div>
+                  <h3>Timen Painting</h3>
               </a>
           </div>
        </div>
