--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
            
            
             <h1>About me</h1>
+            <img class="mypic" src="img/aboutme.jpg"/>
             <p>Hey! I’m Icy Leng ❄️❄️❄️, I'm a graphic designer in Los Angeles. <br>
                 I just graduated from <a href="https://www.otis.edu/">Otis College of Art and Design</a> for my graduate program.<br>
                 I specialize in UI/UX design & branding with a keen interest in typography and illustrations.<br>
