--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                       &nbsp;&nbsp;/<br>
                       05
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#UI&UX</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#Branding</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;
                        <a href="timepainting.html" class="left-to-right">time painting</a>
                        &nbsp;&nbsp;</h6>   
@@ -97,8 +97,8 @@
                       &nbsp;&nbsp;/<br>
                       05
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#E-commerce</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#UI&UX</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#E-commerce</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        <a href="lightbox.html" class="left-to-right">Lightbox</a>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h6>   
@@ -110,8 +110,8 @@
                       &nbsp;&nbsp;/<br>
                       05
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#UI&UX</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#Branding</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        <a href="themountain.html" class="left-to-right">Mountain</a>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h6>   
@@ -123,8 +123,8 @@
                       &nbsp;&nbsp;/<br>
                       05
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#UI&UX</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#Branding</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        <a href="meow.html" class="left-to-right">Meow</a>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h6>   
@@ -136,8 +136,8 @@
                       &nbsp;&nbsp;/<br>
                       05
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#UI&UX</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#Branding</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;
                        <a href="ceramicclub.html" class="left-to-right">ceramics club</a>
                        &nbsp;&nbsp;</h6>
