--- a/others.html
+++ b/others.html
@@ -48,8 +48,9 @@
                       &nbsp;&nbsp;/<br>
                       09
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#printing</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#experimental</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#branding</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        <a href="arworld.html" class="left-to-right">AR world</a>
                        &nbsp;&nbsp;&nbsp;&nbsp;</h6>
