--- a/printing.html
+++ b/printing.html
@@ -48,7 +48,7 @@
                </div>
                
                <div class="item fade">
-                    <a href="sb.html">
+                    <a href="monkey.html">
                         <img class="homeimg" src="img/index/monkey.png"/>
                         <div class="project" style="background-color: #edf6eb">
                             <h1 class="text" style="font-size: 9vw; letter-spacing: 1.2vw;">Conference</h1>
@@ -68,8 +68,8 @@
                       &nbsp;&nbsp;/<br>
                       03
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#Publication</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Typography</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#publication</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#typography</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        <a href="" class="left-to-right">To Mars</a>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h6>
@@ -81,8 +81,10 @@
                       &nbsp;&nbsp;/<br>
                       03
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#Publication</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Typography</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#publication</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#UI&UX</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#typography</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#branding</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        <a href="sb.html" class="left-to-right">Sk8board</a>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h6>
@@ -94,10 +96,10 @@
                       &nbsp;&nbsp;/<br>
                       03
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#Publication</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Typography</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#publication</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#typography</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;
-                       <a href="" class="left-to-right">Comic Conference</a>
+                       <a href="monkey.html" class="left-to-right">Comic Conference</a>
                        &nbsp;&nbsp;</h6>
                </div>
                
