--- a/video.html
+++ b/video.html
@@ -65,8 +65,11 @@
                       &nbsp;&nbsp;/<br>
                       03
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#motion</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#animation</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#3D</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#video</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#branding</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;&nbsp;
                        <a href="futurebirthday.html" class="left-to-right">future Party</a>
                    &nbsp;&nbsp;</h6>
@@ -78,8 +81,8 @@
                       &nbsp;&nbsp;/<br>
                       03
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#video</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#branding</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;&nbsp;&nbsp;
                        <a href="brightyourlife.html" class="left-to-right">Post-it Ad</a>
                    &nbsp;&nbsp;&nbsp;&nbsp;</h6>
@@ -91,8 +94,9 @@
                       &nbsp;&nbsp;/<br>
                       03
                    </h2>
-                   <h5 class="filters"><a href="" class="left-to-right">#UI&UX</a></h5>
-                   <h5 class="filters"><a href="" class="left-to-right">#Branding</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#motion</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#animation</a></h5>
+                   <h5 class="filters"><a href="allworks.html" class="left-to-right">#video</a></h5>
                    <h6 class="projectname">&nbsp;&nbsp;
                        <a href="newchinglish.html" class="left-to-right">New Chinglish</a>
                    &nbsp;</h6>
