--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
                 I specialize in UI/UX design & branding with a keen interest in typography and illustrations.<br>
                 But I also like to do some videos and handicrafts as well~
                 <br><br><br>
-                Feel free to check my <a>resume</a>.<br>
-                If you’d like to chat <a>contact me</a>.</p>
+                Feel free to check my <a href="icy-resume.pdf">resume</a>.<br>
+                If you’d like to chat <a href="mailto:icylengdesign@gmail.com">contact me</a>.</p>
            
            <div class="contentbox"></div>
            <canvas id="canvas"></canvas>
