--- a/others.html
+++ b/others.html
@@ -9,7 +9,7 @@
        
    <body>
        <header>
-           <img class="logo" src="img/logo.png"/>
+           <a href="index.html"><img class="logo" src="img/logo.png"/></a>
            <span class="menu-icon">
                <div class="right"></div>
                <div class="remove"></div>
@@ -29,12 +29,14 @@
 
 <!--others content-->
                <div class="item fade">
+                   <div class="card" style="background: transparent linear-gradient(to top left, #16114a 30%, #510a77 70%, #400a93 100%)">
                     <a href="arworld.html">
                         <img class="homeimg" src="img/index/arworld.png"/>
                         <div class="project" style="background: transparent linear-gradient(to top left, #16114a 30%, #510a77 70%, #400a93 100%)">
                             <h1 class="text">AR world</h1>
                         </div>
                     </a>
+                   </div>
                </div>
 
            </div>
