--- a/allworks.html
+++ b/allworks.html
@@ -36,7 +36,7 @@
                       <li class="others-item printing-item">
                          <img src="img/random/1.png"/>
                          <h4>AR Future World</h4>
-                         <p>A series of posters, visual research and form-making about a future where people live mostly through augmented reality</p>
+                         <p>A series of posters, visual research, and form-making about a future where people live mostly through augmented reality</p>
                          <div class="tag"><p class="others">#others</p><p class="printing">#printing</p></div>
                       </li>
                    </a>
