--- a/lightbox.html
+++ b/lightbox.html
@@ -33,7 +33,7 @@
            
            <span class="discription-column">
                <h2>Role</h2>
-               <p>UI Design & Developer</p>
+               <p>UI&UX Design & Developer<br><br><a class="left-to-right" href="https://shop114357459.taobao.com/?spm=a230r.7195193.1997079397.2.TH84sT"><strong>Visit it</strong></a></p>
            </span>
            
            <span class="discription-column">
