--- a/newchinglish.html
+++ b/newchinglish.html
@@ -28,7 +28,7 @@
        <div class="discription" style="padding-top: 550px">
            <span class="discription-column">
                <h2>Project</h2>
-               <p>This is a series of videos for foreigners to learn Chinglish </p>
+               <p>This is a series of videos for foreigners to learn Chinglish<br><br><a class="left-to-right" href="https://newchinglish.tumblr.com/"><strong>See More</strong></a> </p>
            </span>
            
            <span class="discription-column">
