--- a/timepainting.html
+++ b/timepainting.html
@@ -28,12 +28,12 @@
        <div class="discription">
            <span class="discription-column">
                <h2>Project</h2>
-               <p>Timepainting is an app allows people to create visual time journals on provided time templates. </p>
+               <p>Time Painting is an app allows people to create visual time journals on provided time templates. </p>
            </span>
            
            <span class="discription-column">
                <h2>Audience</h2>
-               <p>People who feels disconnect with "time" and people who feels stressful and people who has anxiety and stress because of their fast paced life </p>
+               <p>People who feel the disconnect with "time" and people who feel stressful and people who have anxiety and stress because of their fast paced-life. </p>
            </span>
            
            <span class="discription-column">
