--- a/brightyourlife.html
+++ b/brightyourlife.html
@@ -33,7 +33,7 @@
            
            <span class="discription-column">
                <h2>group</h2>
-               <p><a href="http://www.shaonandesign.com">Shaonan Zhou</a></p>
+               <p><a href="http://www.shaonandesign.com" class="left-to-right">Shaonan Zhou</a></p>
            </span>
            
            <span class="discription-column">
