--- a/timepainting.html
+++ b/timepainting.html
@@ -38,7 +38,7 @@
            
            <span class="discription-column">
                <h2>two related therapies</h2>
-               <p>1. Do time journal<br>2. Engaging in the creative arts</p>
+               <p>1. Do time journal<br>2. Engaging in the creative arts<br><br><a class="left-to-right" href="https://invis.io/3DB84VGAZ#/228051604_Logopage"><strong>Experience it</strong></a></p>
            </span>
        </div>
        
