--- a/printingreverse.html
+++ b/printingreverse.html
@@ -104,9 +104,9 @@
                    </h2>
                    <h5 class="filters"><a href="allworks.html" class="left-to-right">#publication</a></h5>
                    <h5 class="filters"><a href="allworks.html" class="left-to-right">#typography</a></h5>
-                   <h6 class="projectname">&nbsp;&nbsp;
-                       <a href="monkey.html" class="left-to-right">Comic Conference</a>
-                       &nbsp;&nbsp;</h6>
+                   <h6 class="projectname">
+                       <a href="monkey.html" class="left-to-right">Comic Conference</a>&nbsp;
+                       </h6>
                </div>
                
            </div>
